# TRL-Bench

./: .gitignore  CITATION.cff  README.md  pyproject.toml  requirements.txt
.github/workflows/: release-verify.yml
configs/: grid.yaml
configs/downstream/: column_relation_prediction.yaml  column_type_prediction.yaml  join_classification.yaml  join_containment.yaml  record_linkage.yaml  row_prediction.yaml  table_fact_verification.yaml  table_subset.yaml  union_classification.yaml  union_regression.yaml
docs/: ADDING_A_MODEL.md  ADDING_A_TASK.md  CHECKPOINT_LICENSES.md  USAGE.md
scripts/: checksums.sha256  download_checkpoints.sh  finalize_release.sh  gen_grid_cells.py  smoke_matrix.sh  verify_release.sh
slurm/: aggregate_results.py  build_job_tracker.py  check_results.py  generate_downstream_scripts.py  generate_jobs.py  generate_row_data_downstream_scripts.py  generate_row_data_scripts.py  generate_row_scripts.py  generate_scripts.py  generate_table_embedding_scripts.py  generate_table_lists.py  local_overrides.py  merge_shards.py  submit.sh  submit_all.py  submit_dlte.py  submit_downstream.py  submit_downstream_matrix.py  validate_embeddings.py
slurm/config/: datasets.yaml  models.yaml  resources.yaml  row_data_models.yaml  row_models.yaml  table_models.yaml
slurm/config/downstream/: baselines.yaml  task_datasets.yaml  tasks.yaml
slurm/scripts/templates/: embedding_job.sbatch.template  merge_shards.sbatch.template  native_table_embedding_job.sbatch.template  pretrain_only.sbatch.template  row_data_embedding_job.sbatch.template  row_embedding_job.sbatch.template  table_embedding_job.sbatch.template  text_embedding_job.sbatch.template
slurm/scripts/templates/downstream/: baseline.sbatch.template  column_clustering.sbatch.template  column_relation_prediction.sbatch.template  column_type_prediction.sbatch.template  dlte_alignment.sbatch.template  dlte_merge.sbatch.template  dlte_retrieval.sbatch.template  join_classification.sbatch.template  join_containment.sbatch.template  join_search.sbatch.template  join_search_learned.sbatch.template  record_linkage.sbatch.template  row_prediction.sbatch.template  schema_matching.sbatch.template  semantic_parsing.sbatch.template  table_fact_verification.sbatch.template  table_retrieval.sbatch.template  table_subset.sbatch.template  union_classification.sbatch.template  union_regression.sbatch.template  union_search.sbatch.template
slurm/templates/: base.sbatch.tmpl
src/trl_bench/: registry.py  run.py
src/trl_bench/baselines/: __init__.py  chance.py  construct_tus_hard.py  dataset_stats.yaml  generate_random_embeddings.py  valentine_baselines.py
src/trl_bench/baselines/column_clustering/: __init__.py  generate_tfidf_embeddings.py
src/trl_bench/baselines/record_linkage/: generate_jaccard_row_embeddings.py  generate_tfidf_row_embeddings.py
src/trl_bench/baselines/value_overlap/: core.py  join_search.py  run_all.sh  union_search.py
src/trl_bench/data/: __init__.py  ctbench.py  dlte.py  rbench.py  stage.py
src/trl_bench/effbench/: __init__.py  analyze.py  anchors_row.json  generate_scale_suite.py  run_all.py  select_anchors.py  spec.py  timer.py
src/trl_bench/effbench/scale_suite/: manifest.json
src/trl_bench/models/bert/: USAGE.md  generate_column_embeddings.py  generate_embeddings_train_test.py  generate_row_embeddings.py  generate_text_embeddings.py
src/trl_bench/models/dae/: USAGE.md  generate_embeddings.py  generate_embeddings_directory.py  train_dae.py
src/trl_bench/models/gte/: USAGE.md  generate_column_embeddings.py  generate_embeddings_train_test.py  generate_row_embeddings.py  generate_text_embeddings.py
src/trl_bench/models/mpnet/: generate_text_embeddings.py
src/trl_bench/models/openai/: client.py  generate_all_embeddings.py  generate_column_embeddings.py  generate_column_embeddings_batch.py  generate_embeddings_train_test.py  generate_row_embeddings.py  generate_row_embeddings_batch.py  generate_text_embeddings.py
src/trl_bench/models/saint/: USAGE.md  generate_embeddings.py  generate_embeddings_directory.py  train_saint.py
src/trl_bench/models/scarf/: USAGE.md  generate_embeddings.py  generate_embeddings_directory.py  train_scarf.py
src/trl_bench/models/sentence_t5/: generate_text_embeddings.py
src/trl_bench/models/starmie/: USAGE.md  discovery.py  example.txt  extractColumnVectors.py  extractVectors.py  generate_column_embeddings.py  hnsw_search.py  run_all.py  run_pretrain.py  run_santos_aligned.sh  search_simple.py  test_hnsw_search.py  test_lsh.py
src/trl_bench/models/subtab/: USAGE.md  train_subtab.py  (+2 more)
src/trl_bench/scripts/: generate_table_embeddings.py
src/trl_bench/utils/: generate_table_embeddings_text_encoder.py  pickle_compat.py  table_list.py
tests/: conftest.py  smoke_test.py  test_data_ctbench.py  test_data_dlte.py  test_data_rbench.py  test_data_registry.py  test_downstream_config.py  test_extractor_dispatch.py  test_generate_jobs.py  test_generate_scripts_smoke.py  test_generate_table_embeddings.py  test_grid_generation_scale.py  test_join_search_splits.py  test_path_constants.py  test_registry.py  test_repair_tabsketchfm_degenerate.py  test_run.py  test_setting_dispatch.py  test_slurm_path_substrings.py  test_stage.py  test_switchtab_restore.py  test_tabsketchfm_data_prep.py  test_task_packages.py
(+409 files in other folders)
